--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcc 'AP'
 - !lcc 'PZ'
 - !lcsh 'Children''s literature, American -- Periodicals'
+- GITenberg
 title: 'The Nursery, February 1877, Vol. XXI. No. 2
 
   A Monthly Magazine for Youngest Readers'
